--- a/doc/source/release_notes.txt
+++ b/doc/source/release_notes.txt
@@ -1,4 +1,5 @@
 Release Notes:
+    4.7.3   - Make ligand matching more robust by ignoring hydrogen layer.
     4.7.2   - Doc updates.
     4.7.1   - Fix typos.
     4.7.0   - Replace usage of VIPARR3_FFDIR with VIPARR_FFPATH.
