--- a/doc/source/release_notes.txt
+++ b/doc/source/release_notes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+    4.7.4   - Small python3 fix.
+            - Fix viparr-merge-forcefields.
     4.7.3   - Make ligand matching more robust by ignoring hydrogen layer.
     4.7.2   - Doc updates.
     4.7.1   - Fix typos.
