--- a/doc/source/release_notes.txt
+++ b/doc/source/release_notes.txt
@@ -1,4 +1,7 @@
 Release Notes:
+    4.7.21  viparr_solvate: wrap atoms before finding overlap
+            Ignore innocuous errors during ApplyLigandforcefields
+
     4.7.20  New viparr-convert-psf script.
             Fix viparr_solvate when center is not at the origin.
 
