--- a/doc/source/release_notes.txt
+++ b/doc/source/release_notes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+    4.7.23  Support pdff forcefields with --ffdir.
+
     4.7.22  viparr_solvate: wrap atoms using input box dimensions
 
     4.7.21  viparr_solvate: wrap atoms before finding overlap
