--- a/doc/source/release_notes.txt
+++ b/doc/source/release_notes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+    4.7.25  Convert to pybind11.
+
     4.7.24  Add --ffde option to viparr.
             Get rid of optimize_vsite_defs.
 
